# Multi-Agent-Scrum-Team

./: .pre-commit-config.yaml  pyproject.toml
src/multi_agent_scrum_team/agents/: base.py  re_agent.py
src/multi_agent_scrum_team/config/: settings.py
src/multi_agent_scrum_team/domain/: __init__.py  ports.py
src/multi_agent_scrum_team/domain/models/: __init__.py  artifact.py  llm.py
src/multi_agent_scrum_team/domain/ports/: __init__.py  artifact_store.py  llm.py
src/multi_agent_scrum_team/infrastructure/: artifact_store.py  openai_adapter.py
